# BEVfusion_preprocess

./: README.md
BEV/: README.md
BEV/lidar_preprocessor/install/: local_setup.sh  setup.sh
BEV/lidar_preprocessor/install/three_lidar/lib/three_lidar/: back  left  right
BEV/lidar_preprocessor/install/three_lidar/share/three_lidar/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
BEV/lidar_preprocessor/install/three_lidar/share/three_lidar/cmake/: three_lidarConfig.cmake
BEV/lidar_preprocessor/install/velocity_msg/include/velocity_msg/msg/: num.hpp  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
BEV/lidar_preprocessor/install/velocity_msg/share/velocity_msg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
BEV/lidar_preprocessor/install/velocity_msg/share/velocity_msg/cmake/: velocity_msg__rosidl_generator_cExport.cmake  velocity_msg__rosidl_generator_cppExport.cmake  velocity_msg__rosidl_typesupport_cppExport.cmake  velocity_msg__rosidl_typesupport_introspection_cExport.cmake  velocity_msg__rosidl_typesupport_introspection_cppExport-noconfig.cmake
BEV/lidar_preprocessor/install/velocity_msg/share/velocity_msg/msg/: Num.idl
BEV/lidar_preprocessor/log/: latest_build
BEV/lidar_preprocessor/src/back_lidar/: CMakeLists.txt  package.xml
BEV/lidar_preprocessor/src/back_lidar/src/: back_lidar.cpp
BEV/lidar_preprocessor/src/left_lidar/: CMakeLists.txt  package.xml
BEV/lidar_preprocessor/src/left_lidar/launch/: launch.py
BEV/lidar_preprocessor/src/left_lidar/src/: left_lidar.cpp
BEV/lidar_preprocessor/src/left_lidar/test/: left_lidar_launch.testing.py
BEV/lidar_preprocessor/src/right_lidar/: CMakeLists.txt  package.xml
BEV/lidar_preprocessor/src/right_lidar/launch/: launch.py
BEV/lidar_preprocessor/src/right_lidar/src/: right_lidar.cpp
BEV/lidar_preprocessor/src/three_lidar/: CMakeLists.txt
BEV/lidar_preprocessor/src/three_lidar/include/left_lidar/: left_lidar_node.hpp
BEV/lidar_preprocessor/src/three_lidar/include/right_lidar/: right_lidar_node.hpp
BEV/lidar_preprocessor/src/three_lidar/src/: back_lidar.cpp  left_lidar.cpp  right_lidar.cpp
BEV/multi_lidar/install/: local_setup.sh  setup.sh
BEV/multi_lidar/install/autoware_point_types/share/autoware_point_types/: package.bash  package.zsh
BEV/multi_lidar/install/c_auto_vehicle_msgs/include/c_auto_vehicle_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  (+2 more)
BEV/multi_lidar/install/c_auto_vehicle_msgs/share/c_auto_vehicle_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
BEV/multi_lidar/install/concat/lib/concat/: concatenate_data_node
BEV/multi_lidar/install/concat/share/concat/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
BEV/multi_lidar/log/: latest_build
BEV/multi_lidar/src/autoware_point_types/: CMakeLists.txt
BEV/multi_lidar/src/c_auto_vehicle_msgs/msg/: VelocityReport.idl
BEV/multi_lidar/src/concat/include/: filter.hpp
BEV/multi_lidar/src/concat/launch/: preprocessor.launch.py
BEV/multi_lidar/src/concat/src/concatenate_data/: concatenate_data_nodelet.cpp
BEV/simple_topics/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
BEV/simple_topics/install/velocity_pubsub/lib/velocity_pubsub/: auto_velocity  int_velocity
BEV/simple_topics/install/velocity_pubsub/share/velocity_pubsub/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
BEV/simple_topics/log/: latest_build
BEV/simple_topics/src/int_pub/: CMakeLists.txt  package.xml
BEV/simple_topics/src/velocity_report_pub/: CMakeLists.txt  package.xml
BEV/simple_topics/src/velocity_report_pub/src/: code.cpp  publisher_member_function.cpp
BEVFusion/back_lidar/: CMakeLists.txt  package.xml
BEVFusion/back_lidar/launch/: launch.py
BEVFusion/back_lidar/src/: back_lidar.cpp  back_lidar_node.cpp
BEVFusion/lidar_preprocessor/: start.sh
BEVFusion/lidar_preprocessor/src/concat/: CMakeLists.txt  package.xml
BEVFusion/lidar_preprocessor/src/concat/src/concatenate_data/: concatenate_data_nodelet.cpp
BEVFusion/lidar_preprocessor/src/three_lidar/include/right_lidar/: right_lidar_node.hpp
BEVFusion/lidar_preprocessor/src/three_lidar/launch/: launch.py
BEVFusion/lidar_preprocessor/src/three_lidar/src/left_lidar/: left_lidar.cpp  left_lidar_node.cpp
BEVFusion/lidar_preprocessor/src/three_lidar/src/right_lidar/: right_lidar.cpp
BEVFusion/velocity_msg/: CMakeLists.txt
BEVFusion/xyzit_msg/: CMakeLists.txt  package.xml
BEVFusion/xyzit_msg/msg/: Custom.msg
BEVfusion/imgs/: temp.txt
BEVfusion/workspace/: start.sh
BEVfusion/workspace/lidar_preprocessing/src/three_lidar/config/: back_lidar.rviz
BEVfusion/workspace/lidar_preprocessing/src/three_lidar/launch/: launch.py
Code/workspace/lidar_preprocessing/src/three_lidar/: CMakeLists.txt
Code/workspace/lidar_preprocessing/src/three_lidar/include/back_lidar/: back_lidar_node.hpp
Code/workspace/lidar_preprocessing/src/three_lidar/src/left_lidar/: left_lidar.cpp
Code/workspace/simple_topics/src/velocity_report_pub/launch/: launch.py
Code/workspace/simple_topics/src/velocity_report_pub/src/: code_node.cpp
lidar_preprocessing/src/custom_msgs/c_auto_vehicle_msgs/: CMakeLists.txt  package.xml
lidar_preprocessor/: tf.sh
lidar_preprocessor/src/concat/include/concat/: concatenate_data_nodelet.hpp
lidar_preprocessor/src/concat/launch/: preprocessor.launch.xml
lidar_preprocessor/src/concat/src/: filter.cpp
lidar_preprocessor/src/three_lidar/include/back_lidar/: back_lidar_node.hpp
lidar_preprocessor/src/three_lidar/include/left_lidar/: left_lidar_node.hpp
lidar_preprocessor/src/three_lidar/src/back_lidar/: back_lidar.cpp
lidar_preprocessor/src/three_lidar/src/left_lidar/: left_lidar.cpp
lidar_preprocessor/src/three_lidar/src/right_lidar/: right_lidar_node.cpp
(+36 files in other folders)
