<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>concat</name>
  <version>0.0.0</version>
  <description>Example to include pcl in ROS2</description>
  <maintainer email="mahler@dst-org.de">jo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_1.10</depend>
  
  
  <depend>rclcpp_components</depend>
  <depend>diagnostic_updater</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>point_cloud_msg_wrapper</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-all-dev</depend>
  <depend>c_auto_vehicle_msgs</depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
